--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pinia": "^2.1.7",
     "socket.io-client": "^4.7.5",
     "vue": "^3.4.21",
+    "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
